fixed spacing

--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -6,8 +6,8 @@
 }
 
 #projects h2 {
-  padding-top: 35px;
-  padding-bottom: 5%;
+  padding-top: 15px;
+  padding-bottom: 2%;
 }
 
 @media only screen and (max-width: 2000px) {
@@ -77,4 +77,5 @@
   font-size: .8em;
   color: #FF00FF;
   margin: 0;
+  padding: 1%;
 }
